aish-rs/tui/src/status/snapshots/aish_tui__status__tests__status_snapshot_includes_credits_and_limits.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────╮
│  Aish (v0.0.0)                                                  │
│                                                                 │
│  Model:          gpt-5.1-codex (reasoning none, summaries auto) │
│  Approval:       untrusted                                      │
│  Sandbox:        read-only                                      │
│                                                                 │
│  Token usage:    2K total  (1.4K input + 600 output)            │
│  5h limit:       [███████████░░░░░░░░░] 55% left (resets 09:25) │
│  Weekly limit:   [██████████████░░░░░░] 70% left (resets 09:55) │
│  Credits:        38 credits                                     │
╰─────────────────────────────────────────────────────────────────╯
