aish-rs/tui/src/status/snapshots/aish_tui__status__tests__status_snapshot_shows_empty_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  Aish (v0.0.0)                                                     │
│                                                                    │
│  Model:         gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Approval:      untrusted                                          │
│  Sandbox:       read-only                                          │
│                                                                    │
│  Token usage:   750 total  (500 input + 250 output)                │
│  Limits:        data not available yet                             │
╰────────────────────────────────────────────────────────────────────╯
