aish-rs/tui/src/status/snapshots/aish_tui__status__tests__status_snapshot_shows_stale_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────╮
│  Aish (v0.0.0)                                                      │
│                                                                     │
│  Model:          gpt-5.1-codex-max (reasoning none, summaries auto) │
│  Approval:       untrusted                                          │
│  Sandbox:        read-only                                          │
│                                                                     │
│  Token usage:    1.9K total  (1K input + 900 output)                │
│  5h limit:       [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)     │
│  Weekly limit:   [████████████░░░░░░░░] 60% left (resets 03:34)     │
│  Warning:        limits may be stale - start new turn to refresh.   │
╰─────────────────────────────────────────────────────────────────────╯
