aish-rs/tui/src/status/snapshots/aish_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  Aish (v0.0.0)                                                     │
│                                                                    │
│  Model:         gpt-5.1-codex-max (reasoning high, summaries detai │
│  Approval:      untrusted                                          │
│  Sandbox:       read-only                                          │
│                                                                    │
│  Token usage:   1.9K total  (1K input + 900 output)                │
│  5h limit:      [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)     │
╰────────────────────────────────────────────────────────────────────╯
